--- a/bdplayer/src/main/res/layout/activity_video_player.xml
+++ b/bdplayer/src/main/res/layout/activity_video_player.xml
@@ -92,7 +92,7 @@
         android:layout_marginRight="5dp"
         android:layout_marginBottom="60dp"
         android:orientation="horizontal"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
